feat: finalizada documentação swagger
